add folder livre and route livres

--- a/site_serveur/views/home.html.twig
+++ b/site_serveur/views/home.html.twig
@@ -1,5 +1,6 @@
 {% extends "base.html.twig" %}
 
+{% block titre %} Home Page {% endblock %}
+
 {% block contenu %}
-    <h1>Home Page</h1>
 {% endblock %}
